# Fluid_SimulationSPH

./: .gitignore  CMakeLists.txt  README.md
dependencies/glad/: glad.h
src/: Vector.cpp  Vector.h  config.h  fluid.cpp  fluid.h  glad.c  globals.h  gravity.cpp  gravity.h  main.cpp  triangle.cpp
src/shaders/: fragment.txt  vertex.txt
